--- a/src/main/resources/templates/hotel/bookingForm.html
+++ b/src/main/resources/templates/hotel/bookingForm.html
@@ -95,8 +95,8 @@
                     <div class="form-group">
                         <label for="paymentMethod">Hình thức thanh toán:</label>
                         <select id="paymentMethod" name="paymentMethod" class="form-control">
-                            <option value="Thanh toán bằng tiền mặt">Thanh toán bằng tiền mặt</option>
-                            <option value="card">Thanh toán bằng thẻ</option>
+                            <option value="COD">Thanh toán bằng tiền mặt</option>
+                            <option value="CARD">Thanh toán bằng thẻ</option>
                         </select>
                     </div>
                     <!-- Nút submit để đặt phòng -->
